--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <article class="container">
       <h2>DESCUBRE LA CIUDAD DE PSECODYA</h2>
         <div class="container p-3 my-5 bg-dark text-white w-100" >
-            <img src="Images/MapaProvisional.png" id="ImagenMapa" usemap="#mapa" class="w-100 maparea" >
+            <img src="images/mapa.png" id="ImagenMapa" usemap="#mapa" class="w-100 maparea" >
         </div>    
       
 
